<resources>
    <string name="app_name">Pixelated</string>
    <string name="online_arcade">Enter Online Arcade</string>
    <string name="physical_arcade">IRL Arcade</string>
    <string name="galaga">Galaga</string>
    <string name="pacman">Pacman</string>
    <string name="centipede">Centipede</string>
    <string name="ArcadeMap">Arcade Map</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="login_button">Log In or Sign Up</string>
    <string name="fail_login">Wrong Username or Password</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="userPasswdKV">com.cs407.pixelated.userPasswdKV</string>
    <string name="welcomeMessage">Welcome to</string>
    <string name="pixelated">Pixelated</string>
    <string name="username_text">Username: %1$s</string>
    <string name="level">Level: %d</string>
    <string name="insert_photo">Insert Photo Here</string>
    <string name="favorite_game">Favorite Game: %1$s</string>
    <string name="favorite_arcade">Favorite Arcade: %1$s</string>
    <string name="achievements">Achievements: </string>
    <string name="game_over">GAME OVER</string>
    <string name="restart">Tap to try again</string>
    <string name="you_won">YOU WON!</string>
    <string name="play_again">Tap to play again</string>
    <string name="blinky">SHADOW - - - - "BLINKY"</string>
    <string name="pinky">SPEEDY- - - - - "PINKY"</string>
    <string name="inky">BASHFUL- - - - - "INKY"</string>
    <string name="clyde">POKEY - - - - - "CLYDE"</string>
    <string name="sky_high">Sky high: new high score, %d!</string>
    <string name="level_up">Level up: hello, level %d!</string>

    <string name="first_high">%d</string>
    <string name="second_high">%d</string>
    <string name="third_high">%d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="highScore">"High Score: "</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="highscore_title">High Score</string>
    <string name="galaga_highscore">Galaga:</string>
    <string name="pacman_highscore">Pac-Man:</string>
    <string name="centipede_highscore">Centipede:</string>
    <string name="pacman_recent">%d</string>
    <string name="pacman_high">%d</string>
</resources>