<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="242dp"
        android:background="@drawable/app_background">

        <Button
            android:id="@+id/centipede"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/centipede"
            android:textSize="15sp"
            android:layout_marginStart="-135dp"
            android:layout_marginTop="260dp"/>

        <Button
            android:id="@+id/galaga"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/galaga"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="-105dp"/>

        <Button
            android:id="@+id/pacman"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/pacman"
            android:textSize="15sp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-105dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="665dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/arcade_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ArcadeMap"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="426dp"
            android:backgroundTint="@color/brown"
            android:textColor="@color/cream"/>

        <Button
            android:id="@+id/scoreboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoreboard"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="426dp"
            android:backgroundTint="@color/brown"
            android:textColor="@color/cream"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>