<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnlineArcade">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arcadegamebackground" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="225dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/galaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galaga"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="200dp" />

        <Button
            android:id="@+id/pacman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pacman"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="316dp" />

        <Button
            android:id="@+id/centipede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centipede"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="426dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>